# cockroach

docs/RFCS/: hypo_index_explain.md
docs/tech-notes/: hypo_index_explain_examples.md
docs/tech-notes/observability/: hypo_index_explain_design.md
pkg/: BUILD.bazel
pkg/ccl/logictestccl/tests/3node-tenant/: generated_test.go
pkg/ccl/logictestccl/tests/local-read-committed/: generated_test.go
pkg/ccl/logictestccl/tests/local-repeatable-read/: generated_test.go
pkg/ext/hypoindex/: BUILD.bazel  IMPLEMENTATION.md  README.md  SUMMARY.md  extension.go  hypo_index.go  hypoindex_test.go  query_analyzer.go  register.go
pkg/sql/: BUILD.bazel  hypo_index_explain.go  hypo_index_explain_manual_test.go  hypo_index_explain_test.go
pkg/sql/catalog/hypotable/: hypotable.go
pkg/sql/logictest/testdata/logic_test/: builtins  hypo_index_explain
pkg/sql/logictest/tests/fakedist/: generated_test.go
pkg/sql/logictest/tests/fakedist-disk/: generated_test.go
pkg/sql/logictest/tests/fakedist-vec-off/: generated_test.go
pkg/sql/logictest/tests/local/: generated_test.go
pkg/sql/logictest/tests/local-legacy-schema-changer/: generated_test.go
pkg/sql/logictest/tests/local-mixed-24.3/: generated_test.go
pkg/sql/logictest/tests/local-mixed-25.1/: generated_test.go
pkg/sql/logictest/tests/local-vec-off/: generated_test.go
pkg/sql/opt/memo/: memo.go
pkg/sql/sem/builtins/: BUILD.bazel  builtins.go  fixed_oids.go  hypo_index.go  hypo_index_test.go  hypo_index_test_manual.go
